eks/eks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silver-spork 
  namespace: silver-spork
  labels:
    app: silver-spork
spec:
  selector:
    app: silver-spork
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
