eks/eks-silver-spork.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: silver-spork
  name: silver-spork
  labels:
    app: silver-spork 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: silver-spork
  template:
    metadata:
      labels:
        app: silver-spork
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: silver-spork
        image: 825407915625.dkr.ecr.us-east-2.amazonaws.com/silver-spork:285e87fab3465f73c3e9719209a69fe2d7722585
        ports:
        - name: http
          containerPort: 5000
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  namespace: silver-spork
  name: silver-spork 
  labels:
    app: silver-spork
spec:
  selector:
    app: silver-spork
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: silver-spork
  name: silver-spork 
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: silver-spork
              port:
                number: 80
